--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,6 +395,15 @@ body {
     overflow: hidden;
 }
 
+.product-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Use 'contain' se quiser mostrar a foto inteira sem cortar */
+    object-position: center;
+    display: block;
+    background: white; /* Fundo branco caso use 'contain' */
+}
+
 .product-img::before {
     content: '';
     position: absolute;
